--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,11 +6,12 @@ python-multipart==0.0.6
 # Database
 sqlalchemy==2.0.23
 alembic==1.12.1
-psycopg2-binary==2.9.9
+ psycopg2-binary==2.9.9
+
 
 # Pydantic for validation
-pydantic==2.5.0
-pydantic-settings==2.1.0
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
 
 # Security
 python-jose[cryptography]==3.3.0
