--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,28 +1,70 @@
+# # FastAPI Framework
+# fastapi==0.104.1
+# uvicorn[standard]==0.24.0
+# python-multipart==0.0.6
+
+# # Database
+# sqlalchemy>=2.0.23
+# alembic==1.12.1
+# #  psycopg2-binary==2.9.9
+# psycopg2-binary>=2.9.10 
+
+
+# # Pydantic for validation
+# pydantic>=2.5.0
+# pydantic-settings>=2.1.0
+
+# # Security
+# python-jose[cryptography]==3.3.0
+# passlib[bcrypt]==1.7.4
+# python-dotenv==1.0.0
+
+# # Machine Learning (use Dev 1's versions)
+# scikit-learn>=1.3.2
+# numpy>=1.26.2
+# pandas>=2.1.3
+# scipy>=1.11.4
+
+# # Testing
+# pytest==7.4.3
+# pytest-asyncio==0.21.1
+# httpx==0.25.2
+
+
+
+
+
+# venv) PS C:\Users\KIIT\Desktop\ongoing projects\8th sem project\backend> python --version
+# Python 3.12.7
+
 # FastAPI Framework
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 
-# Database
-sqlalchemy==2.0.23
+# Database - Using psycopg3 for Python 3.12 compatibility
+sqlalchemy>=2.0.23
 alembic==1.12.1
- psycopg2-binary==2.9.9
-
+psycopg[binary]>=3.1.0
 
 # Pydantic for validation
-pydantic>=2.5.0
-pydantic-settings>=2.1.0
+pydantic==2.12.5
+pydantic-core==2.41.5
+pydantic-settings==2.12.0
 
 # Security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
 
-# Machine Learning (use Dev 1's versions)
-scikit-learn>=1.3.2
-numpy>=1.26.2
-pandas>=2.1.3
-scipy>=1.11.4
+# Machine Learning - Python 3.12 compatible versions
+scikit-learn==1.3.2
+numpy==1.26.4
+pandas==2.1.4
+scipy==1.11.4
+
+# Additional ML dependencies
+pyyaml>=6.0.1
 
 # Testing
 pytest==7.4.3
